--- a/index.htm
+++ b/index.htm
@@ -128,6 +128,7 @@
             <img src="microsoft-certified-azure-ai-fundamentals.png" alt="Microsoft Certified Azure AI Fundamentals">
             <img src="microsoft-certified-azure-data-fundamentals.png" alt="Microsoft Certified Azure Data Fundamentals">
             <img src="microsoft-certified-azure-fundamentals.png" alt="Microsoft Certified Azure Fundamentals">
+            <img src="professional-scrum-master-i-psm-i.png" alt="Professional Scrum Master I - PSM I">
         </div>
     </section>
 
