alterada a cor do menu

--- a/index.htm
+++ b/index.htm
@@ -96,7 +96,7 @@
             font-weight: 700;
         }
         .social-links a:hover {
-            color: #005f73;
+            color: #730043;
         }
         .soon {
             margin-top: 30px;
